version finale correction d'un lien invisible

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -302,6 +302,8 @@ header {
   font-size: 50px;
   padding-bottom: 20px;
   font-family: "Shrikhand";
+  width: 270px;
+  margin: auto;
 }
 .footer_frame {
   width: 100%;
@@ -418,4 +420,4 @@ header {
   }
 }
 
-/*# sourceMappingURL=homepage.css.map */
+/*# sourceMappingURL=index.css.map */
