--- a/CSS/restaurant.css
+++ b/CSS/restaurant.css
@@ -219,10 +219,10 @@
 }
 .footer .logo {
   color: rgb(255, 255, 255);
-  width: 100%;
-  padding: 30px 0 20px 70px;
   font-size: 50px;
   font-family: "Shrikhand";
+  width: 270px;
+  margin: auto;
 }
 .footer_display {
   padding: 20px 40px;
