--- a/sass/style_restaurant.scss
+++ b/sass/style_restaurant.scss
@@ -242,10 +242,11 @@ $gradient: linear-gradient(
 
   .logo {
     color: rgb(255, 255, 255);
-    width: 100%;
-    padding: 30px 0 20px 70px;
+
     font-size: 50px;
     font-family: "Shrikhand";
+    width: 270px;
+    margin: auto;
   }
 
   &_display {
